change in design

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
         </div>
         <div class="weather_information">
             <div class="info">
-                 <img src="humdity.jpeg" alt="humid"> 
+                 <img src="humidity.png" alt="humid"> 
                     <div>
                          <p class="humidity">48%</p>
                          <p>Humidity</p>
